# jkp-data

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DATA_LICENSE  LICENSE  README.md  SECURITY.md  Timeline SAS-Python adaption.docx  code_comparison_plots.py  functions.py  portfolio.py  pyproject.toml  release_notes.html  requirements.txt  submit_job.sh  submit_job_som_hpc.slurm
.claude/: settings.json
.claude/agents/: code-critic.md  copilot-triage.md  doc-sync.md  pr-reviewer.md  test-scaffolder.md
.claude/commands/: check-docs.md  review-code.md
.claude/skills/approve-pr/: SKILL.md
.claude/skills/check-docs/: SKILL.md
.claude/skills/draft-pr-comment/: SKILL.md
.claude/skills/review-code/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/review-workflow/: SKILL.md
.claude/skills/triage-copilot/: SKILL.md
.claude/skills/verify-review/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  wheels.yml
Build_database/: aux_functions.py  main.py
build_database/code/: aux_functions.py  main.py  portfolio.py
build_database/slurm/: submit_job_som_hpc.slurm
code/: aux_functions.py  aux_functions_v2.py  config.py  main.py  output_writer.py  portfolio.py  test_from_root.py  wrds_credentials.py
codebase/: readme.md  readme.txt
data/: README.md  sic_ff_mapping.parquet
documentation/: documentation.bib  documentation.tex  documentation_mia_nov2025.tex  jkp_factors_migration.html  jkp_factors_migration.md  jkp_factors_migration.qmd  release_notes.md  release_notes.qmd
documentation/data/: WxUS_factors_py.parquet  sas_vs_py_summ_stats.parquet
documentation/sas_to_python/: release_notes.html  release_notes.qmd
documentation/sas_to_python/data/: US_factors_SAS.parquet  WxUS_factors_SAS.parquet  lms_comparison.parquet
ff_data_comp/: build_dhs_factors.py  run_dhs_factors.slurm
jkp-plugin/: .gitignore  Cargo.toml  pyproject.toml
jkp-plugin/jkp_plugin/: __init__.py
jkp-plugin/src/: lib.rs
old_code/: create_acc_chars.py  portfolio.py  standardized_accounting_data.py  submit_backup_som.sh  submit_job.sh
release_notes_files/data/: WxUS_factors_py.parquet
scripts/: bench_portfolio.py
slurm/: submit_job_som_hpc.slurm
src/jkp/data/: aux_functions.py  cli.py  config.py  main.py  paths.py  portfolio.py
src/jkp/data/resources/: README.md
src/jkp_data/: aux_functions.py  main.py  portfolio.py
tests/: README.md  conftest.py
tests/fixtures/: generate_rolling_golden.py  portfolio_legacy.py
tests/fixtures/golden/: prc_to_high_21d.parquet  turnover_126d.parquet  zero_trades_126d.parquet
tests/perf/: bench_dimsonbeta.py
tests/unit/: test_accounting_formulas.py  test_aug_msf_v2.py  test_aux_functions.py  test_cli.py  test_combine_crsp_comp_sf.py  test_deterministic_dedup.py  test_download_and_config.py  test_expressions.py  test_ff_ind_class.py  test_output_writer.py  test_paths.py  test_portfolio.py  test_portfolio_parity.py  test_ret_exc_wins.py  test_rolling_daily_metrics.py  test_winsorization.py  test_wrds_download.py
wheels/: jkp_plugin-0.1.0-cp311-abi3-macosx_11_0_arm64.whl  jkp_plugin-0.1.0-cp311-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
