[package]
name = "jkp_plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "jkp_plugin"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py311"] }
pyo3-polars = { version = "0.25", features = ["derive"] }
polars = { version = "0.52", default-features = false }
serde = { version = "1", features = ["derive"] }
faer = "0.24"

[profile.release]
lto = "fat"
codegen-units = 1
